# appmap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DESIGN.md  PRODUCT.md  README.md  SECURITY_REVIEW.md  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.anchor.json  tsconfig.json  vitest.config.ts
app/: .env.example  .gitignore  AGENTS.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
docs-site/: README.md  docs.json  introduction.mdx
indexer/: Cargo.toml  Dockerfile  README.md
indexer/decoder/: Cargo.toml
indexer/decoder/src/: lib.rs
indexer/decoder/src/accounts/: app_account.rs  app_tag_account.rs  app_tag_stake.rs  config.rs  mod.rs  neb_pool.rs  stake_position.rs  tag.rs  vote_position.rs
indexer/decoder/src/instructions/: buy_neb.rs  claim_tag_reward.rs  claim_vote_reward.rs  close_tag_stake_position.rs  close_vote_position.rs  fund_app_rewards.rs  init_app.rs  init_neb_pool.rs  initialize.rs  mod.rs  stake_tag.rs  suggest_tag.rs  vote.rs  withdraw_pool_sol.rs  withdraw_tag_stake.rs  withdraw_vote.rs
indexer/decoder/src/types/: mod.rs  reward_pool.rs
indexer/dlmm-bridge/: README.md  package-lock.json  package.json
indexer/dlmm-bridge/src/: index.ts  pool.ts  swap.ts
indexer/migrations/: 001_indexer_tables.sql  002_crawler_cursor.sql  003_drop_neb_pool_snapshot.sql  004_platform_metrics_snapshot.sql  005_app_schema.sql  006_xp_levels.sql  007_xp_daily_cap.sql
indexer/src/: api.rs  backfill.rs  config.rs  crawler.rs  db.rs  dlmm_bridge.rs  main.rs  opengraph.rs  platform_metrics.rs  reconcile.rs  rollup.rs
indexer/src/handlers/: ads.rs  apps.rs  engine.rs  mod.rs  platform.rs  revenue.rs  rewards.rs  stakes.rs  tags.rs  track.rs  users.rs  votes.rs  x402.rs  xp.rs
indexer/src/processors/: account.rs  instruction.rs  mod.rs  product.rs
prisma/: schema.prisma  seed.ts
public/: future-paint-worklet.js
scripts/: ensure-postgres.sh  settleEpoch.ts  (+2 more)
(+389 files in other folders)
