[package]
name = "nebulous-world-indexer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.7"
base64 = "0.22"
bincode = "1"
carbon-core = "0.12.0"
carbon-nebulous-world-decoder = { version = "0.1.0", path = "decoder", features = ["serde"] }
carbon-rpc-program-subscribe-datasource = "0.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.11"
log = "0.4.33"
nebulous_world = { path = "../programs/nebulous_world" }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
solana-account-decoder-client-types = "3.1"
solana-client = "3.0"
solana-commitment-config = "3.1.1"
solana-hash = "3"
solana-instruction = "3.0"
solana-message = { version = "3", features = ["serde"] }
solana-pubkey = { version = "3.0", features = ["serde"] }
solana-signature = "3.4.1"
solana-transaction = { version = "3", features = ["serde"] }
solana-transaction-status = "3.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
tokio = { version = "1.53.0", features = ["full"] }
