[package]
name = "carbon-nebulous-world-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []

serde = ["dep:serde"]

[dependencies]
carbon-core = { version = "0.12.0", features = ["macros"], default-features = false }
borsh = { version = "1.5.1", features = ["derive"] }
solana-pubkey = { version = "^3.0.0", features = ["borsh"] }
solana-account = "3.0.0"
solana-instruction = { version = "~3.0.0", default-features = false }
serde_json = "1.0.145"

serde = { version = "1.0.228", features = ["derive"], optional = true }
